# pyradiko

./: .pylintrc  README.md  pyproject.toml
pyradiko/: __init__.py  main.py
tests/: pyradiko_test.py
