[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'pyradiko'
version = '0.0.1'
description = 'Record Radiko program'
readme = 'README.md'
license = {file = 'LICENSE'}
dependencies = [
    'requests'
]

[tool.setuptools]
packages = ['pyradiko']

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
